Modify jwt class DJWT.Create & DJWT.Verify

--- a/API/README.adoc
+++ b/API/README.adoc
@@ -99,12 +99,13 @@ savePost:{
 * Services
 ** Json Web Token
 ----
-  create
-  verify
+  DJWT.Create(body:{})
+  DJWT.Verify(jwt)
 ----
 * Middleware
 ** Authnetication
-
+----
+----
 * Controllers
 ** User
 
