Modify : Utils responseFunction to response

--- a/API/README.adoc
+++ b/API/README.adoc
@@ -97,7 +97,7 @@ savePost:{
 
 ----
 * Utils
-** responseFunctions
+** response
 ----
   type response={body:any,message:string|" resport ",ok:boolean }
 ----
