--- a/API/README.adoc
+++ b/API/README.adoc
@@ -64,6 +64,12 @@ data{
   savePost:number
   setting:number
 }
+notices:{
+  nick_id:number
+  author:number
+  text:string
+  link:string
+}
 setting:{
   nick_id:number
   theme:string,
