Fix Urls: api/posts to api/post/...

--- a/API/README.adoc
+++ b/API/README.adoc
@@ -37,13 +37,13 @@
 ----
   api/account                                   (LOGIN,POST,PUT,DELETE)
   api/profile/all                               (GET)
-  api/profile/nick_id/(default || number)/      (GET)
+  api/profile/nick_id/<default || number>/      (GET)
   api/profile/                                  (PUT)
   api/setting                                   (GET,PUT)
   api/post/                                     (POST) 
-  api/post/nick_id/(default || number)                                  (GET,DELETE,PUT) 
-  api/posts/ramdon/                             (GET)
-  api/posts/nick_id/(default || number)                            (GET)
+  api/post/nick_id/<number>         (GET,DELETE,PUT) 
+  api/post/author/<default || number>           (GET) 
+  api/post/random/                              (GET)
 
   api/comments    require:  header :{jwt,...}   (GET,POST,PUT,DELETE)
   api/savePost    require:  header :{jwt,...}   (GET,POST,PUT,DELETE)
